// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildInitialCode builds a script for a workflow 1`] = `
"const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/login\\");

const login = async browser => {
  MY_PATCH_HANDLE
};

exports.login = login;

if (require.main === module) {
  (async () => {
    const browser = await launch({ url: \\"http://localhost\\" });
    await login(browser);
    await browser.close();
  })();
}"
`;

exports[`buildInitialCode builds a script for a workflow 2`] = `
"const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/login\\");

const login = async browser => {
  MY_PATCH_HANDLE
};

exports.login = login;

if (require.main === module) {
  (async () => {
    const browser = await launch({ device: \\"iPhone 7\\", url: \\"http://localhost\\" });
    await login(browser);
    await browser.close();
  })();
}"
`;

exports[`buildInitialCode builds a test for a workflow 1`] = `
"const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/login\\");

describe('login', () => {
  let browser;

  beforeAll(async () => {
    browser = await launch({ url: \\"http://localhost\\" });
  });

  afterAll(() => browser.close());
  MY_PATCH_HANDLE
});"
`;

exports[`buildInitialCode builds a test for a workflow 2`] = `
"const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/login\\");

describe('login', () => {
  let browser;

  beforeAll(async () => {
    browser = await launch({ device: \\"iPhone 7\\", url: \\"http://localhost\\" });
  });

  afterAll(() => browser.close());
  MY_PATCH_HANDLE
});"
`;
